--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <button type="button" class="btn">
       <a href="https://github.com/" target="_blank">Click aquí para ir a GitHub!</a>
     </button>
+    <a href="https://github.com/" target="blank">
+      <img src="https://assetscdn.github.com/images/modules/logos_page/Octocat.png" alt="octocat">
+    </a>
   </div>
 </body>
 </html>
